# VTP-web-api

./: .gitignore  Makefile  README.md  pyproject.toml
backend/src/: README.md
docs/: DesignNotes.md
frontend/src/: README.md
src/vtp/web/api/: main.py
src/vtp/web/api/data/: alameda_ca.json  blank-ballot.json  cast-ballot.json  receipts.26.csv
tests/: test_main.py
